--- a/bikeshare.ipynb
+++ b/bikeshare.ipynb
@@ -5,14 +5,96 @@
    "id": "4d89e91d",
    "metadata": {},
    "source": [
-    "# this is a bike share project analysing and answering some questions"
+    "# Basic Data Exploration with pandas on Bikeshare Data\n",
+    "A Python project using pandas to explore bikeshare data.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "850dad18",
+   "id": "4f0c6f30",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Project Overview\n",
+    "This project focuses on pandas library usage and simple statistics methods to perform descriptive analysis on the bikeshare data from three major U.S. cities - Chicago, Washington, and New York City - to display information such as most popular days or most common stations.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6e5008c",
+   "metadata": {},
+   "source": [
+    "# Running the program\n",
+    "You can input 'python bikeshare.py' on your terminal to run this program. I use Anaconda's command prompt on a Windows 10 machine.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4620d01d",
+   "metadata": {},
+   "source": [
+    "# Program Details\n",
+    "The program takes user input for the city (e.g. Chicago), month for which the user wants to view data (e.g. January; also includes an 'all' option), and day for which the user wants to view data (e.g. Monday; also includes an 'all' option).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0587fdc9",
+   "metadata": {},
+   "source": [
+    "# Output \n",
+    "Upon receiving the user input, it goes ahead and asks the user if they want to view the raw data (5 rows of data initially) or not. Following the input received, the program prints the following details:\n",
+    "\n",
+    "- Most popular month\n",
+    "- Most popular day\n",
+    "- Most popular hour\n",
+    "- Most popular start station\n",
+    "- Most popular end station\n",
+    "- Most popular combination of start and end stations\n",
+    "- Total trip duration\n",
+    "- Average trip duration\n",
+    "- Types of users by number\n",
+    "- Types of users by gender (if available)\n",
+    "- The oldest user (if available)\n",
+    "- The youngest user (if available)\n",
+    "- The most common birth year amongst users (if available)\n",
+    "- Finally, the user is prompted with the choice of restarting the program or not."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd411fca",
+   "metadata": {},
+   "source": [
+    "# Requirements\n",
+    "- Language: Python 3.6 or above\n",
+    "- Libraries: pandas, numpy, time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4c62916",
+   "metadata": {},
+   "source": [
+    "# Project Data\n",
+    "- chicago.csv - Stored in the data folder, the chicago.csv file is the dataset containing all bikeshare information for the city of Chicago provided by Udacity.\n",
+    "\n",
+    "- new_york_city.csv - Dataset containing all bikeshare information for the city of New York provided by Udacity.\n",
+    "\n",
+    "- washington.csv - Dataset containing all bikeshare information for the city of Washington provided by Udacity. Note: This does not include the 'Gender' or 'Birth Year' data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52aa1438",
+   "metadata": {},
+   "source": [
+    "# Built with\n",
+    "- Python 3.6.6 - The language used to develop this.\n",
+    "- pandas - One of the libraries used for this.\n",
+    "- numpy - One of the libraries used for this.\n",
+    "- time - One of the libraries used for this."
+   ]
   },
   {
    "cell_type": "code",
@@ -31,18 +113,18 @@
       "Great! you would like to see chicago data. \n",
       "\n",
       "Which month ('January', 'February', 'March', 'April', 'May', 'June') would you filter by or would you see all? for all just say 'all' \n",
-      "may\n",
+      "all\n",
       "Which day ('Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday','Sunday') would you see? for all just say 'all' ( \n",
-      "monday\n",
+      "all\n",
       "----------------------------------------\n",
       "\n",
       "Calculating The Most Frequent Times of Travel...\n",
       "\n",
-      "The most common month is:  may\n",
-      "The most common day of week is:  Monday\n",
+      "The most common month is:  june\n",
+      "The most common day of week is:  Tuesday\n",
       "The most common start hour is:  17\n",
       "\n",
-      "This took 0.01794743537902832 seconds.\n",
+      "This took 0.17003417015075684 seconds.\n",
       "----------------------------------------\n",
       "\n",
       "Calculating The Most Popular Stations and Trip...\n",
@@ -51,28 +133,29 @@
       "The most commonly used end station is : Streeter Dr & Grand Ave\n",
       "The most frequent combination of start station and start station :  ('Lake Shore Dr & Monroe St', 'Streeter Dr & Grand Ave')\n",
       "\n",
-      "This took 0.02900528907775879 seconds.\n",
+      "This took 0.4389994144439697 seconds.\n",
       "----------------------------------------\n",
       "\n",
       "Calculating Trip Duration...\n",
       "\n",
-      "total trip duration :  12697151\n",
-      "the mean of travel time is :  1051.09\n",
+      "total trip duration :  280871787\n",
+      "the mean of travel time is :  936.24\n",
       "\n",
-      "This took 0.006999015808105469 seconds.\n",
+      "This took 0.0040051937103271484 seconds.\n",
       "----------------------------------------\n",
       "\n",
       "Calculating User Stats...\n",
       "\n",
       "Counts of user types:              User Type\n",
-      "Subscriber       8962\n",
-      "Customer         3118\n",
+      "Subscriber     238889\n",
+      "Customer        61110\n",
+      "Dependent           1\n",
       "Counts of Gender:          Gender\n",
-      "Male      6717\n",
-      "Female    2246\n",
-      "The earliest year of birth 1906, the most recent year of birth 2001, the most common year of birth 1989 \n",
+      "Male    181190\n",
+      "Female   57758\n",
+      "The earliest year of birth 1899, the most recent year of birth 2016, the most common year of birth 1989 \n",
       "\n",
-      "This took 0.029995441436767578 seconds.\n",
+      "This took 0.20200300216674805 seconds.\n",
       "----------------------------------------\n"
      ]
     }
@@ -275,21 +358,14 @@
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()"
+    "    main()\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "133ded3a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56de36fc",
+   "id": "452461d3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -311,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
